--- a/23_js_browser.html.html
+++ b/23_js_browser.html.html
@@ -1,20 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link type="text/css" rel="stylesheet" href="style.css">
 </head>
+<style type="text/css">
+    html,
+    body {
+        height: 100%;
+        width: 100%;
+        background: red;
+    }
+</style>
+
 <body>
- <body>
     <h1>Hello World!</h1>
     <div>This is me</div>
-
-   <script type="module" src="script.mjs"></script>
-
+    <script type="text/javascript">
+        alert("Hello");
+        console.log("Hey,DV!");
+    </script>
 </body>
 
-
-</body>
 </html>
