--- a/40_Exercise3.html
+++ b/40_Exercise3.html
@@ -1,15 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>One Joke</title>
   <style>
-    body { font-family: sans-serif; text-align: center; margin-top: 50px; }
-    #jokeBox { font-size: 20px; margin-top: 30px; }
-    button { padding: 10px 20px; font-size: 16px; }
+    body {
+      font-family: sans-serif;
+      text-align: center;
+      margin-top: 50px;
+    }
+
+    #jokeBox {
+      font-size: 20px;
+      margin-top: 30px;
+    }
+
+    button {
+      padding: 10px 20px;
+      font-size: 16px;
+    }
   </style>
 </head>
+
 <body>
 
   <h2>😂 Random Joke Generator</h2>
@@ -38,4 +52,5 @@
   </script>
 
 </body>
+
 </html>
