--- a/47_Events.html
+++ b/47_Events.html
@@ -17,7 +17,7 @@
 
         let a = document.getElementsByClassName("container")[0];
         a.onclick = () => {
-            let b = document.getElementsByClassName("container")[0]
+            let b = document.getElementsByClassName("container")[0];
             b.innerHTML = "Hello World!"
         }
     </script>
